# git-py-stats

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
git_py_stats/: arg_parser.py  calendar_cmds.py  config.py  generate_cmds.py  git_operations.py  interactive_mode.py  list_cmds.py  main.py  menu.py  non_interactive_mode.py  suggest_cmds.py
git_py_stats/tests/: __init__.py  test_arg_parser.py  test_calendar_cmds.py  test_generate_cmds.py  test_git_operations.py  test_interactive_mode.py  test_list_cmds.py  test_menu.py  test_non_interactive_mode.py  test_suggest_cmds.py
man/: git-py-stats.1
